[gd_scene load_steps=4 format=3 uid="uid://khpjibx5drra"]

[ext_resource type="Script" path="res://scripts/inverteregg.gd" id="1_30lw5"]
[ext_resource type="Texture2D" uid="uid://67b8ys2qw7jb" path="res://assets/inverteregg.png" id="2_4ucdt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_chojk"]
radius = 12.9148
height = 25.8295

[node name="InverterEgg" type="Node2D"]
z_index = 1
position = Vector2(558, 54)
script = ExtResource("1_30lw5")

[node name="EggBody" type="RigidBody2D" parent="." groups=["inverter_egg"]]
collision_layer = 2
mass = 1.5
max_contacts_reported = 2
contact_monitor = true
freeze_mode = 1

[node name="EggSprite" type="Sprite2D" parent="EggBody"]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("2_4ucdt")

[node name="EggCollision" type="CollisionShape2D" parent="EggBody"]
position = Vector2(-1, -3)
scale = Vector2(1.7647, 1.85834)
shape = SubResource("CapsuleShape2D_chojk")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="EggBody" to="." method="_on_egg_body_body_entered" flags=18]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
